--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 * text=auto
 
-*.css    text
-*.html   text
-*.js     text
-*.json   text
+*.rb linguist-language=css
+*.rb linguist-language=html
+*.rb linguist-language=js
+*.rb linguist-language=json
