--- a/bower.json
+++ b/bower.json
@@ -3,29 +3,32 @@
   "description": "JQuery plugin for rendering timelines from JSON data.",
   "version": "4.0.0",
   "main": "jquery-albe-timeline.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "jquery": "latest",
     "animate.css": "latest",
-    "bootstrap" : "latest"
+    "bootstrap": "latest"
   },
   "keywords": [
     "timeline"
   ],
-  "authors": [{ 
-    "name": "Albertino Júnior", 
-    "homepage": "http://albertino.eti.br" 
-  }],
+  "authors": [
+    "[object Object]"
+  ],
   "license": "Unlicense",
   "homepage": "https://github.com/Albejr/jquery-albe-timeline",
   "ignore": [
     "*.md",
     "bower_components",
-    "templates"
+    "templates",
+    "**/.*",
+    "node_modules",
+    "test",
+    "tests"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Albejr/jquery-albe-timeline.git"
-  }
+  },
+  "private": true
 }
