--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "animate.css": "latest",
-    "bootstrap": "latest"
+    "bootstrap": "3.3.7"
   },
   "keywords": [
     "timeline"
