--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-albe-timeline",
   "description": "JQuery plugin for rendering timelines from JSON data.",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "main": "jquery-albe-timeline.js",
   "dependencies": {},
   "devDependencies": {
@@ -13,7 +13,7 @@
     "timeline"
   ],
   "authors": [
-    "[object Object]"
+    "Albertino Júnior (http://albertino.eti.br)"
   ],
   "license": "Unlicense",
   "homepage": "https://github.com/Albejr/jquery-albe-timeline",
